add filename and timestamp selectors